save working project state

--- a/styles/scss/bookshelf.scss
+++ b/styles/scss/bookshelf.scss
@@ -28,7 +28,7 @@
 
     .book-info {
       text-transform: uppercase;
-      writing-mode: sideways-rl;
+      writing-mode: vertical-rl;
       display: flex;
       justify-content: space-around;
       flex: 1;
